avoided double border around buttons in Firefox

--- a/style/style.sass
+++ b/style/style.sass
@@ -257,7 +257,7 @@ button.ui-button-icons-only { width: 3.7em; }
 .ui-button .ui-button-text { display: block; line-height: normal; cursor: normal; }
 .ui-button:focus { outline: dotted #000 1px; outline-offset: -4px; }
 .ui-button:active .ui-button-text { border-color: #000; }
-.ui-button-text-only .ui-button-text { min-width: 75px; border-style: solid; border-width: 1px; border-color: transparent #808080 #808080 transparent; }
+.ui-button-text-only .ui-button-text { min-width: 75px; border-width: 0; padding: 1px 0; }
 .ui-button-text-only:active .ui-button-text { border-color: #808080; }
 .ui-button-text-only.ui-button-disabled:active .ui-button-text { border-color: transparent #808080 #808080 transparent; }
 .ui-button-icon-only .ui-button-text, .ui-button-icons-only .ui-button-text { padding: 0; text-indent: -9999999px; }
